--- a/Certificate.html
+++ b/Certificate.html
@@ -9,11 +9,11 @@
   <body>
     <div class="header">
       <div class="left">
-        <h2><a class="logo" href="./home.html">Dhruv Patel</a></h2>
+        <h2><a class="logo" href="./index.html">Dhruv Patel</a></h2>
       </div>
       <div class="right">
         <ul class="ul">
-          <li><a class="a1" href="./home.html">Home</a></li>
+          <li><a class="a1" href="./index.html">Home</a></li>
           <li><a class="a1" href="./about.html">About</a></li>
           <li><a class="a1" href="./skills.html">Skills & Projects</a></li>
           <li><a class="a1" href="./Certificate.html">Certificate</a></li>
