--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
   <body>
     <div class="header">
       <div class="left">
-        <h2><a class="logo" href="./home.html">Dhruv Patel</a></h2>
+        <h2><a class="logo" href="./index.html">Dhruv Patel</a></h2>
       </div>
       <div class="right">
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./skills.html">Skills & Projects</a></li>
           <li><a href="./Certificate.html">Certificate</a></li>
