--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="header">
       <div class="left">
-        <h2><a class="logo" href="./home.html">Dhruv Patel</a></h2>
+        <h2><a class="logo" href="./index.html">Dhruv Patel</a></h2>
       </div>
       <div class="right">
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./skills.html">Skills & Projects</a></li>
           <li><a href="./Certificate.html">Certificate</a></li>
